--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -16,6 +16,9 @@ env OID_REDIRECT_PATH;
 env OIDC_AUTH_SCOPE;
 env OIDC_AUTH_METHOD;
 env OIDC_RENEW_ACCESS_TOKEN_ON_EXPIERY;
+env LOG_USER_CLAIM;
+env BASIC_AUTH_USERNAME;
+env BASIC_AUTH_PASSWORD;
 env PROXY_HOST;
 env PROXY_PORT;
 env PROXY_PROTOCOL;
