--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -23,6 +23,7 @@ env PROXY_HOST;
 env PROXY_PORT;
 env PROXY_PROTOCOL;
 
+
 events {
     worker_connections  1024;
 }
@@ -44,6 +45,8 @@ http {
 
     lua_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.crt;
     lua_ssl_verify_depth 5;
+
+    lua_package_path "/usr/local/openresty/nginx/lua/?.lua;;";
 
     resolver 1.1.1.1;
 }
